<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".view.OAuthActivity">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/margin_top_components"
            android:src="@drawable/luisjuranelogo" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etUserOAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/start_end_margin"
                    android:layout_marginTop="@dimen/margin_top_components"
                    android:layout_marginEnd="@dimen/start_end_margin"
                    android:hint="@string/username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordOAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/start_end_margin"
                    android:layout_marginTop="@dimen/margin_top_components"
                    android:layout_marginEnd="@dimen/start_end_margin"
                    android:hint="@string/passwor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etUserOAuth"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnLoginOAuht"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/start_end_margin"
                    android:layout_marginTop="@dimen/margin_top_components"
                    android:layout_marginEnd="@dimen/start_end_margin"
                    android:layout_marginBottom="@dimen/margin_top_components"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btnRegistroOAuht"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/start_end_margin"
                    android:layout_marginTop="@dimen/margin_top_components"
                    android:layout_marginEnd="@dimen/start_end_margin"
                    android:layout_marginBottom="@dimen/margin_top_components"
                    android:text="@string/registro" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnSignGoogleOAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_components" />
    </LinearLayout>
</ScrollView>